--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   chart_sparkline: ^1.0.15+1
   intl: ^0.19.0
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
