--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   chart_sparkline: ^1.0.15+1
   intl: ^0.19.0
   pie_chart: ^5.4.0
+  firebase_core: "^2.20.0"
+  firebase_auth: ^4.14.0
 
 dev_dependencies:
   flutter_test:
