--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: "^2.20.0"
   firebase_auth: ^4.14.0
   cloud_firestore: ^4.13.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
